# hookd

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  config.sample.yaml  openapi.yaml
.githooks/: post-commit
.github/workflows/: docker.yml  rust-workflow.yml
src/: api.rs  command.rs  config.rs  error.rs  file.rs  lib.rs  logging.rs  main.rs  model.rs
