[package]
name = "hookd"
version = "0.1.3"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2018"
description = "A simple webhook daemon that supports multiple hooks, passing env vars and reading stdout/stderr."
readme = "README.md"
repository = "https://gitlab.com/famedly/devops/services/hookd"
license = "AGPL-3.0-only"
keywords = ["webhook"]

[dependencies]
anyhow = "1.0.53"
chrono = { version = "0.4.19", features = ["serde"] }
directories-next = "2.0.0"
fern = "0.6.0"
log = { version = "0.4.14", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.8.23"
substring = "1.4.5"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
uuid = { version = "0.8.2", features = ["serde", "v4"], default-features = false }
axum = { version = "0.4.5", features = ["headers"] }
http = "0.2.6"
hyper = "0.14.16"
headers = "0.3.6"
