[package]
name = "hookd"
version = "1.1.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2018"
description = "A simple webhook daemon that supports multiple hooks, passing env vars and reading stdout/stderr."
readme = "README.md"
repository = "https://github.com/famedly/hookd"
license = "AGPL-3.0-only"
keywords = ["webhook"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories-next = "2"
fern = "0.6"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
substring = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
uuid = { version = "1.10", features = ["serde", "v4"], default-features = false }
axum = "0.7"
http = "1.1"
hyper = "1.4"
humantime-serde = "1.1.1"
